# behave-automation

./: .env.example  .gitignore  README.md  behave.ini  dlksadasç  pyproject.toml  requirements.txt  teste.py
.github/: BRANCHING.md  SETUP_GITHUB.md
.github/workflows/: workflow_dev.yml
features/: __init__.py  delivery_driver_reg.feature  environment.py  exemplo.feature  home.feature  nav.feature  navigation.feature
features/pages/: __init__.py  base_page.py
features/steps/: __init__.py  base_steps.py  delivery_driver_steps.py  home_steps.py  steps_exemplo.py
scripts/: teste.py
src/automation/config/: env_config.py
src/automation/core/: driver_manager.py
src/automation/pages/: base_page.py  delivery_page.py  home_page.py
src/automation/services/: cep_service.py
src/automation/utils/: logger.py
support/: __init__.py
support/drivers/: __init__.py  driver_manager.py
support/utils/: __init__.py  env_config.py
