
[project]
name = "behave-automation"
version = "0.1.0"
description = "Automação BDD com Behave, Selenium e utilitários."
authors = [
    {name = "Ney Backes", email = "backesney@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "behavex>=4.6.0",
    "selenium>=4.15.2,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "faker>=24.8.0,<25.0.0"
]

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[tool.taskipy.tasks]
run = 'behave'
lint = 'ruff check .'
format = 'ruff format .'
pre_test = 'task lint'
test = 'behavex'
post_test = 'allure generate output/ -o output/allure-report --clean'

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
